# cafeto

./: .coveragerc  .flake8  .gitignore  README.es.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  task.txt
cafeto/: __init__.py  app.py  types.py
cafeto/authentication/: __init__.py  requires.py
cafeto/background/: __init__.py
cafeto/convertors/: __init__.py
cafeto/datastructures/: __init__.py
cafeto/dependency_injection/: __init__.py  service_collection.py  service_provider.py
cafeto/dtos/: __init__.py
cafeto/errors/: __init__.py  errors.py
cafeto/events/: __init__.py  action_events.py
cafeto/middleware/: __init__.py
cafeto/models/: __init__.py  base_model.py  model_creator.py  model_validator.py  validator_collection.py
cafeto/mvc/: __init__.py  action.py  base_controller.py  endpoint.py  types.py
cafeto/requests/: __init__.py  request.py
cafeto/responses/: __init__.py  codes.py  formats.py  model_response.py  unified_response.py
cafeto/routing/: __init__.py
cafeto/schema/: __init__.py  default_docs.py  openapi.py
cafeto/services/: __init__.py  context_service.py
cafeto/staticfiles/: __init__.py
cafeto/templating/: __init__.py
cafeto/testclient/: __init__.py
cafeto/websocket/: __init__.py  websocket.py
docs/en/: access_control.md  api.md  controllers_and_actions.md  dependency_injection.md  events.md  index.md  params.md  request.md  response.md  schema.md  sponsor.md  starlette_request_object.md  validations.md  websockets.md
docs/es/: access_control.md  api.md  (+12 more)
site/: index.html
tests/: conftest.py  data.py
(+47 files in other folders)
