[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cafeto"

version = "0.1.1"

authors = [
  { name="Jonathan Espinal", email="jonathan.espinal@gmail.com" },
]

description = "A plugin for Starlette designed to create APIs more easily and professionally."

readme = "README.md"

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"

keywords = ["Starlette", "API", "MVC", "cafeto", "plugin"]

dependencies = [
  "Jinja2==3.1.5",
  "pydantic==2.8.2",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "pytest-asyncio==0.25.3",
  "python-multipart==0.0.20",
  "PyYAML==6.0.2",
  "starlette==0.45.3",
  "uvicorn==0.34.0",
  "mkdocs==1.6.1",
  "mkdocs-i18n==0.4.6",
  "mkdocs-material==9.6.5",
  "mkdocs-material-extensions==1.3.1",
  "httpx==0.28.1",
  "websockets==14.2"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
cafeto = "cafeto:main"
